Fix CSS class namespacing

--- a/docs/css/guimath.css
+++ b/docs/css/guimath.css
@@ -60,7 +60,7 @@
     stroke: var(--error-red);
 }
 
-.guimath_tab_container {
+._guimath_tab_container {
     padding: 5px;
     font-family: monospace;
     font-size: 1.1rem;
@@ -72,11 +72,11 @@
     margin: 0 10px;
 }
 
-.guimath_tab_container._guimath_active_tab {
+._guimath_tab_container._guimath_active_tab {
     background-color: var(--background-dark-1);
 }
 
-.guimath_tab_container:hover {
+._guimath_tab_container:hover {
     background-color: var(--background-dark-1);
 }
 
@@ -94,7 +94,7 @@
     overflow-x: auto;
 }
 
-.guimath_tab {
+._guimath_tab {
     padding: 10px;
     margin-top: 10px;
     display: none;
@@ -102,7 +102,7 @@
     flex-flow: row wrap;
 }
 
-.guimath_tab .guimath-btn {
+._guimath_tab ._guimath_btn {
     background-color: var(--background-color);
     transition: background-color ease 0.15s;
     cursor: pointer;
@@ -118,7 +118,7 @@
     font-size: 1.1rem;
 }
 
-.guimath-btn:hover {
+._guimath_btn:hover {
     background-color: var(--background-dark-1);
 }
 
